Add class + fix misspelled name to "Fulvius subnitens"
Fulvius subnitens: ad-hoc-checklist:taxon:d306ddeb22ed4a8e41b1afebc6c31b59

--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -202,6 +202,22 @@ Map values:
 taxon %<>% mutate(dwc_phylum = phylum)
 ```
 
+### class
+
+Inspect values:
+
+```{r}
+taxon %>%
+  group_by(class) %>%
+  count()
+```
+
+Map values:
+
+```{r}
+taxon %<>% mutate(dwc_class = class)
+```
+
 ### order
 
 Inspect values:
